# FlexiAssistGlove

./: CMakeLists.txt  README.md  compile.sh  prj.conf
boards/: stm32_min_dev_blue.overlay
boards/arm/stm32f030c8t6/: Kconfig.board  Kconfig.defconfig  board.cmake  stm32f030c8t6.dts  stm32f030c8t6.yaml  stm32f030c8t6_defconfig
boards/arm/stm32f030c8t6/doc/: index.rst
src/: main.c
src/app/dev/: pwm.c  pwm.h
src/app/imu/: imu.c  imu.h
src/app/sensor/: air_sensor.c  air_sensor.h
src/patch/: 0001-add-hal-gpio.patch
